@@ -1,1 +1,1 @@
-<a href="$URL?width=$WIDTH" class="nav"><img src="$PICTURE"><br>$DIRECTION - $FILENAME</a>
+<a href="{ $URL }?width={ $WIDTH }" class="nav"><img src="{ $PICTURE }"><br>{ $DIRECTION } - { $FILENAME }</a>
