@@ -1,1 +1,1 @@
-$SIZE
+{ $SIZE }
