@@ -1,1 +1,1 @@
-	<div class="folder"><a href="$FILEURL/"><img src="/icons/gallery/agfolder.png" alt="* $FILE"><br>$FILE</a></div>
+	<div class="folder"><a href="{ $FILEURL }/"><img src="/icons/gallery/agfolder.png" alt="* { $FILE }"><br>{ $FILE }</a></div>
