@@ -1,8 +1,8 @@
 <table align="center" class="info">
   <tr>
 	  <td>
-      <h1>$ERRORTITLE</h1>
-      <p>$ERROR</p>
+      <h1>{ $ERRORTITLE }</h1>
+      <p>{ $ERROR }</p>
       <p><a clas="nav" href="javascript:back()">Back</a>
     </td>
   </tr>
