@@ -1,1 +1,1 @@
-    <div class="folder"><a href="$FILEURL"><img border="0" alt="$ALT" src="/icons/gallery/$FILETYPE.png"><br>$FILE</a></div>
+    <div class="folder"><a href="{ $FILEURL }"><img border="0" alt="{ $ALT }" src="/icons/gallery/{ $FILETYPE.png }"><br>{ $FILE }</a></div>
