@@ -20,6 +20,8 @@ snapshot
 	  GalleryThumbnailSize is the long and the short side
 	  of the thumbnail image instead of the width and height.
 	  (Don Armstrong)
+	- Switched to use Text::Template instead of CGI::FastTemplate,
+	  see the UPGRADE file for details. (Don Armstrong)
 
 If set to '1', GalleryThumbnailSize is the long and the short side
 of the thumbnail image instead of the width and height.
